# delta-rs

./: Cargo.toml
crates/deltalake/: Cargo.toml
crates/deltalake-core/: Cargo.toml
crates/deltalake-core/src/protocol/: checkpoints.rs  mod.rs
crates/deltalake-core/src/protocol/parquet_read/: mod.rs
crates/deltalake-core/src/table/: config.rs  mod.rs  state.rs  state_arrow.rs
crates/deltalake-core/src/writer/: mod.rs  stats.rs  utils.rs
crates/deltalake/examples/: recordbatch-writer.rs
rust/examples/: recordbatch-writer.rs
rust/src/: delta.rs  delta_config.rs  table_state.rs
rust/src/action/: checkpoints.rs
rust/src/protocol/: checkpoints.rs
rust/src/storage/: s3.rs
rust/src/table/: mod.rs  state.rs
rust/src/writer/: mod.rs
