[workspace]
members = [
    "crates/*",
    "delta-inspect",
    "python",
]
exclude = ["proofs"]
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
# arrow
arrow = { version = "47" }
arrow-array = { version = "47" }
arrow-buffer = { version = "47" }
arrow-cast = { version = "47" }
arrow-ord = { version = "47" }
arrow-row = { version = "47" }
arrow-schema = { version = "47" }
arrow-select = { version = "47" }
parquet = { version = "47" }

# datafusion
datafusion = { version = "32" }
datafusion-expr = { version = "32" }
datafusion-common = { version = "32" }
datafusion-proto = { version = "32" }
datafusion-sql = { version = "32" }
datafusion-physical-expr = { version = "32" }

bigdecimal = { version = "0.4" }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }

# "stdlib"
bytes = { version = "1" }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
regex = { version = "1" }
thiserror = { version = "1" }
url = { version = "2" }
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }

[patch.crates-io]
arrow = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-array = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-buffer = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-cast = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-ord = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-row = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-schema = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
arrow-select = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
parquet = { git = "https://github.com/segmentio/arrow-rs", branch = "parse_decimal" }
